<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/profile_image">
    </ImageView>

    <EditText
        android:id="@+id/username_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/edit_profile"
        android:drawableTint="@android:color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/write_your_name"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:layout_below="@id/settings_profile_image">
    </EditText>


    <EditText
        android:id="@+id/bio_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/edit_status"
        android:drawableTint="@android:color/white"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:hint="@string/write_your_bio"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@id/username_settings"
        android:gravity="center_vertical">
    </EditText>

    <Button
        android:id="@+id/save_settings_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:background="@color/light_green"
        android:layout_below="@id/bio_settings"
        android:gravity="center">
    </Button>
</RelativeLayout>