<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp">

    <RelativeLayout
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_notification"
            android:layout_width="280dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_image"
            android:layout_marginTop="15dp">
        </ImageView>
        <TextView
            android:id="@+id/name_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/image_notification">
        </TextView>
        <Button
            android:id="@+id/request_accept_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_notification"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="79dp"
            android:layout_marginRight="79dp"
            android:padding="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/accept_friend_request"
            android:textSize="13sp"
            android:visibility="gone">
        </Button>
        <Button
            android:id="@+id/request_decline_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_accept_btn"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="79dp"
            android:layout_marginRight="79dp"
            android:layout_marginBottom="12dp"
            android:padding="5dp"
            android:background="@android:color/holo_blue_light"
            android:textColor="@color/white"
            android:text="@string/cancel_friend_request1"
            android:textSize="13sp"
            android:visibility="gone">
        </Button>
    </RelativeLayout>
</androidx.cardview.widget.CardView>